# omni-tool-runtime

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.legacy  README.md  batch_nextflow_min.json  batch_nextflow_more.json  omnibioai-tool-runtime.ALL_CODE.txt  pyproject.toml
.github/workflows/: ci.yml
docs/: tes-cloud-aws-smoke-test.md  tes-cloud-azure-smoke-test.md  tes_K8S_MINIKUBE_SMOKE.md
generic_sif_runner/: run.py
omni-tool-runtime/: Makefile
omni_tool_runtime/: __init__.py  contract.py  result_uri.py  run.py  upload_result.py
omni_tool_runtime.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
omni_tool_runtime/uploaders/: __init__.py  azureblob_uploader.py  s3_uploader.py
scripts/: flatten_code_for_review.py  new_tool.py
tests/: test_azureblob_uploader.py  test_contract.py  test_echo_run.py  test_generic_sif_runner_run.py  test_result_uri_parse.py  test_run.py  test_s3_uploader.py  test_tools_echo_test.py  test_upload_dispatch.py  test_upload_result.py
tests/smoke/: echo-smoke-job.yaml  run.sh
tools/: __init__.py
tools/echo_test/: __init__.py  run.py
tools/generic_sif_runner/: run.py
tools/workflow_runner/: run.py
